SAK-52757 Admin-tools fix warning test (#14983)